# anywidget

./: .gitignore  .oxfmtrc.json  .oxlintrc.json  CONTRIBUTING.md  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.json  vite.config.ts  vitest.config.js  vitest.workspace.js
.changeset/: clarify-change-callback.md  config.json  drop-python-38.md  initialize-exports.md  real-files-allow.md  signal-lifecycle.md  widget-composition.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
anywidget/: _descriptor.py  experimental.py
docs/: README.md  astro.config.js  package.json  tailwind.config.cjs
docs/public/: make-scrollable-code-focusable.js
docs/scripts/: ipynb.mjs  utils.mjs
docs/src/: consts.ts  env.d.ts  languages.ts  util.ts
docs/src/components/Footer/: AvatarList.astro
docs/src/components/Header/: LanguageSelect.tsx  Search.css  Search.tsx  SidebarToggle.css  SidebarToggle.tsx  ThemeToggleButton.css  ThemeToggleButton.tsx
docs/src/components/RightSidebar/: TableOfContents.tsx
docs/src/pages/blog/: a-year-with-anywidget.md  anywidget-02.md  anywidgets-all-the-way-down.md  introducing-anywidget.mdx
docs/src/pages/en/: afm.md  bundling.md  community.mdx  getting-started.mdx  jupyter-widgets-the-good-parts.mdx
docs/src/styles/: index.css  theme.css
paper/: paper.md
rfcs/: 0001-widget-composition-and-signals.md
tests/: test_descriptor.py  test_experimental.py  test_file_contents.py  test_protocols.py  test_widget.py
